[package]
name = "arrownam"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "55.0.0", features = ["ipc"] }
arrow-ipc = "55.0.0"
arrow-buffer = "55.0.0"
bytes = "1.10.1"
memmap2 = "0.9.5"
num = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
